--- a/styles/main.css
+++ b/styles/main.css
@@ -9,10 +9,19 @@ body {
 
 /* SITE HEADER */
 .site-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #fff;
 }
 
+.site-header-right {
+  display: flex;
+  align-items: center;
+}
+
 .sitenav-list {
+  display: flex;
   list-style-type: none;
 }
 
@@ -35,6 +44,9 @@ body {
 
 /* HERO */
 .hero {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   background-color: #252420;
 }
 
@@ -74,9 +86,14 @@ body {
   line-height: 1.2;
 }
 
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
 .features-item {
   width: 340px;
-  list-style-type: none;
 }
 
 .features-icon-wrapper {
@@ -93,35 +110,46 @@ body {
 }
 
 /* AKSIYA */
-.aksiya {
+.promo {
+  display: flex;
   width: 1100px;
+  align-items: center;
+  justify-content: space-between;
   background-color: #252420;
 }
 
-.aksiya-content {
+.promo-content {
   width: 440px;
   color: #fff;
 }
 
-.aksiya-heading {
+.promo-heading {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 1.2;
 }
 
-.aksiya-highlight {
+.promo-highlight {
   color: #ff7500;
 }
 
-.aksiya-img {
+.promo-img {
   width: 440px;
   height: 440px;
   object-fit: cover;
 }
 
 /* SITE FOOTER */
-.site-footer ul {
+
+.site-footer-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.site-footer-socials {
+  display: flex;
   list-style-type: none;
 }
 
@@ -131,8 +159,15 @@ body {
   background-color: rgba(37, 36, 32, 0.5);
 }
 
+.footer-links {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+}
+
 .footer-list {
   width: 224px;
+  list-style-type: none;
 }
 
 .footer-list a {
