--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,10 @@ body {
   opacity: 0.6;
 }
 
+.logo-link img {
+  display: block;
+}
+
 .orange-btn {
   display: inline-block;
   color: #fff;
@@ -65,7 +69,17 @@ body {
 .sitenav-list {
   display: flex;
   padding: 0;
+  margin: 0;
+  margin-right: 32px;
   list-style-type: none;
+}
+
+.sitenav-item {
+  margin-right: 32px;
+}
+
+.sitenav-item:last-child {
+  margin: 0;
 }
 
 .sitenav-link {
@@ -105,6 +119,8 @@ body {
   width: 80px;
   height: 3px;
   border: 0;
+  margin: 0;
+  margin-bottom: 40px;
   background-color: #ff7500;
 }
 
@@ -112,7 +128,14 @@ body {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 40px;
   font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 24px;
   line-height: 1.2;
+}
+
+.hero-text {
+  margin-top: 0;
+  margin-bottom: 32px;
 }
 
 .hero-img {
@@ -129,8 +152,14 @@ body {
   padding-bottom: 210px;
 }
 
+.features-line {
+  margin-bottom: 24px;
+}
+
 .features-heading {
   font-family: "Roboto Condensed", "Arial", sans-serif;
+  margin-top: 0;
+  margin-bottom: 72px;
   font-size: 72px;
   font-weight: 700;
   line-height: 1.2;
@@ -139,12 +168,17 @@ body {
 .features-list {
   display: flex;
   padding: 0;
-  justify-content: space-between;
+  margin: 0;
   list-style-type: none;
 }
 
 .features-item {
+  margin-right: 40px;
   width: 340px;
+}
+
+.features-item:last-child {
+  margin: 0;
 }
 
 .features-icon-wrapper {
@@ -153,6 +187,7 @@ body {
   align-items: center;
   width: 100px;
   height: 100px;
+  margin-bottom: 32px;
   border-radius: 50%;
   background-color: rgba(255, 117, 0, 0.2);
 }
@@ -160,8 +195,14 @@ body {
 .features-title {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 12px;
   font-weight: 700;
   line-height: 1.2;
+}
+
+.features-text {
+  margin: 0;
 }
 
 /* AKSIYA */
@@ -181,8 +222,23 @@ body {
 .promo-heading {
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-size: 40px;
+  margin-top: 0;
+  margin-bottom: 24px;
   font-weight: 700;
   line-height: 1.2;
+}
+
+.promo-text {
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.promo-text:last-child {
+  margin: 0;
+}
+
+.promo-info-wrapper {
+  margin-bottom: 24px;
 }
 
 .promo-highlight {
@@ -212,14 +268,28 @@ body {
 .site-footer-socials {
   display: flex;
   padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
+.site-footer-socials a {
+  display: block;
+}
+
 .socials-icon {
+  display: block;
   color: #252420;
   width: 24px;
   height: 24px;
   transition: color 0.3s ease, opacity 0.3s ease;
+}
+
+.site-footer-socials li {
+  margin-right: 16px;
+}
+
+.site-footer-socials li:last-child {
+  margin: 0;
 }
 
 .socials-icon:hover {
@@ -233,6 +303,8 @@ body {
 .footer-line {
   width: 1100px;
   height: 2px;
+  margin-top: 40px;
+  margin-bottom: 64px;
   border: 0;
   background-color: rgba(37, 36, 32, 0.5);
 }
@@ -240,13 +312,18 @@ body {
 .footer-links {
   display: flex;
   align-items: start;
-  justify-content: space-between;
 }
 
 .footer-list {
   width: 224px;
+  margin: 0;
+  margin-right: 68px;
   padding: 0;
   list-style-type: none;
+}
+
+.footer-list:last-child {
+  margin: 0;
 }
 
 .footer-list a {
