--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", "Arial", sans-serif;
   color: #000;
@@ -5,6 +9,15 @@ body {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.5px;
+}
+
+.container {
+  width: 100%;
+  max-width: 1140px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 *:focus {
@@ -52,13 +65,16 @@ body {
 
 /* SITE HEADER */
 .site-header {
-  display: flex;
-  align-items: center;
   padding-top: 16px;
   padding-bottom: 16px;
   border-top: 5px solid #ff7500;
-  justify-content: space-between;
   background-color: #fff;
+}
+
+.site-header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .site-header-right {
@@ -102,12 +118,15 @@ body {
 
 /* HERO */
 .hero {
-  display: flex;
-  align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
-  justify-content: space-between;
   background-color: #252420;
+}
+
+.hero-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .hero-content {
@@ -142,6 +161,7 @@ body {
   width: 510px;
   height: 510px;
   border-radius: 8px;
+  box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
 }
 
 /* FEATURES */
@@ -207,8 +227,15 @@ body {
 
 /* AKSIYA */
 .promo {
+  padding-top: 120px;
+  padding-bottom: 160px;
+}
+
+.promo-inner {
+  padding: 64px;
   display: flex;
   width: 1100px;
+  border-radius: 12px;
   align-items: center;
   justify-content: space-between;
   background-color: #252420;
@@ -249,7 +276,7 @@ body {
   width: 440px;
   height: 440px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 12px;
 }
 
 /* SITE FOOTER */
@@ -257,6 +284,7 @@ body {
 .site-footer {
   padding-top: 56px;
   padding-bottom: 56px;
+  background-color: #f8f8f8;
 }
 
 .site-footer-top {
@@ -324,6 +352,14 @@ body {
 
 .footer-list:last-child {
   margin: 0;
+}
+
+.footer-list li {
+  margin-bottom: 16px;
+}
+
+.footer-list li:last-child {
+  margin-bottom: 0;
 }
 
 .footer-list a {
